# mimimum required version 3.15: policy CMP0092
# mimimum required version 3.12: target_compile_features C++ 20
# mimimum required version 3.8:  target_compile_features C++ 17
cmake_minimum_required(VERSION 3.15)

# policy CMP0092 MSVC COMPILE FLAGS -- no warings by default
cmake_policy(SET CMP0092 NEW)

# Project name
project(dte2600_TEMPLATE_SOURCE VERSION 0.1 LANGUAGES CXX)


###########################################
# Assignment Problems
#add_subdirectory(problems/dmoj_tutorial_01)
#add_subdirectory(problems/dmoj_tutorial_02)
#add_subdirectory(problems/dmoj_tutorial_03)
#add_subdirectory(problems/dmoj_tutorial_04)
#add_subdirectory(problems/dmoj_tutorial_05)
#add_subdirectory(problems/dmoj_tutorial_06)
#add_subdirectory(problem_templates/main_function)
#add_subdirectory(problem_templates/signature_function)
#add_subdirectory(problems/a02p01)
#add_subdirectory(problems/a02p02)
#add_subdirectory(problems/a02p04)
#add_subdirectory(problems/a02p05)
#add_subdirectory(problems/a02p06)
#add_subdirectory(problems/a02p07)
#add_subdirectory(problems/a02p08)
#add_subdirectory(problems/a02p09)
#add_subdirectory(problems/a02p10)
#add_subdirectory(problems/a02p11)
#add_subdirectory(problems/a02p12)
#add_subdirectory(problems/a02p13)
#add_subdirectory(problems/a02p14)
#add_subdirectory(problems/a02p15)
#add_subdirectory(problems/a02p16)
#add_subdirectory(problems/a03p01)
#add_subdirectory(problems/a03p02)
#add_subdirectory(problems/a03p03) #fails the test
#add_subdirectory(problems/a03p04)
#add_subdirectory(problems/a03p05)
#add_subdirectory(problems/a03p06)
#add_subdirectory(problems/a03p07)
#add_subdirectory(problems/a03p08)
#add_subdirectory(problems/a04p01)
#add_subdirectory(problems/a04p02)
#add_subdirectory(problems/a04p03)
#add_subdirectory(problems/a04p04)
#add_subdirectory(problems/a04p05)
#add_subdirectory(problems/a04p06) #fails the test
#add_subdirectory(problems/a04p07)
#add_subdirectory(problems/a04p08)
#add_subdirectory(problems/a05p01)
#add_subdirectory(problems/a05p02)
#add_subdirectory(problems/a05p03)
#add_subdirectory(problems/a05p04)
#add_subdirectory(problems/a05p05)
#add_subdirectory(problems/a05p06)
#add_subdirectory(problems/a05p07)
#add_subdirectory(problems/a05p08)
#add_subdirectory(problems/a05p09)
#add_subdirectory(problems/a05p10)
#add_subdirectory(problems/a06p01)
#add_subdirectory(problems/a06p02)
#add_subdirectory(problems/a06p03)
#add_subdirectory(problems/a06p04)
#add_subdirectory(problems/a06p05)
#add_subdirectory(problems/a06p06)
#add_subdirectory(problems/a06p07)
#add_subdirectory(problems/a06p08)
#add_subdirectory(problems/a06p09)
#add_subdirectory(problems/a07p01)
#add_subdirectory(problems/a07p02)
#add_subdirectory(problems/a07p03)
#add_subdirectory(problems/a07p04)
#add_subdirectory(problems/a07p05)
#add_subdirectory(problems/a07p06)
#add_subdirectory(problems/a07p07)
#add_subdirectory(problems/a07p08)
#add_subdirectory(problems/a08p01)
#add_subdirectory(problems/a08p02)
add_subdirectory(problems/a08p03)
###########################################
# Qt creator dummy target
option(DUMMY_TARGET "Dummy target..." TRUE)
if(DUMMY_TARGET)
  add_custom_target(${PROJECT_NAME}_DUMMY)
endif(DUMMY_TARGET)
